Update login and signup links to PHP files; remove old HTML files for signin and signup.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <li><a href="#contact" class="hover:underline text-lg">Contact</a></li>
             </ul>
             <div class="ml-auto">
-                <a href="user/signin.html" class="hover:underline">Se connecter</a>
-                <a href="user/signup.html" class="bg-black text-white p-2 px-4 ml-2 rounded-full cursor-pointer hover:bg-slate-800 inline-block">Commencer</a>
+                <a href="user/signin.php" class="hover:underline">Se connecter</a>
+                <a href="user/signup.php" class="bg-black text-white p-2 px-4 ml-2 rounded-full cursor-pointer hover:bg-slate-800 inline-block">Commencer</a>
             </div>
         </nav>
     </header>
